# bumblebee_ide

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  patch_pipeline_5.py
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/graph/: batch_upsert.py  client.py  indexer.py  logic_pack.py  logic_queries.py  queries.py  schema_description.py  timeline.py
backend/app/models/: compose_models.py  exceptions.py  logic_models.py
backend/app/routers/: chat.py  codegen.py  compose.py  cypher_eval.py  edges.py  edit.py  files.py  flows.py  graph.py  import_router.py  index.py  logic_nodes.py  logic_pack.py  suggestions.py  type_shapes.py  variables.py  variables_v2.py  vfs.py  websocket.py
backend/app/services/: agent_tools_v2.py  ast_parser.py  bumblebee_watcher.py  code_generator.py  cypher_agent.py  dataflow_extractor.py  deserializer.py  edge_service.py  flow_service.py  gap_analysis.py  ghost_preview.py  hash_identity.py  import_pipeline.py  (+12 more)
backend/data/: cypher_training.jsonl
backend/models/: cypher-specialist.Modelfile
backend/scripts/: export_for_finetuning.py  validate_training_data.py
backend/tests/: conftest.py  test_agent_tools_v2.py  test_ast_parser.py  test_cypher_examples.py  test_dataflow.py  test_hash_identity.py  test_ingestion_flow.py  test_logic_models.py  test_model_adapter.py  test_queries.cypher  test_relationships.py  test_roundtrip.py  test_serializer.py  test_statements.py  test_suggestions.py  test_suggestions_unit.py  test_timeline.py  test_type_shape_matching.py  test_type_shapes.py  test_variables.py
(+220 files in other folders)
